deploy/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: component-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: component-api
  template:
    metadata:
      labels:
        app: component-api
    spec:
      containers:
      - name: api
        image: component-oriented-web-app_api
        imagePullPolicy: "Never"
        ports:
        - containerPort: 8080
        tty: true
      restartPolicy: Always
