deploy/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: component-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: component-app
  template:
    metadata:
      labels:
        app: component-app
    spec:
      containers:
      - name: app
        image: component-oriented-web-app_app
        imagePullPolicy: "Never"
        ports:
        - containerPort: 3000
        tty: true
      restartPolicy: Always
