deploy/minio-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: component-minio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: component-minio
  template:
    metadata:
      labels:
        app: component-minio
    spec:
      containers:
      - name: minio
        image: component-oriented-web-app_minio
        imagePullPolicy: "Never"
        args:
         - server
         - /data
        ports:
        - containerPort: 9000
      restartPolicy: Always
