deploy/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: component-mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: component-mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: component-mysql
    spec:
      containers:
      - name: mysql
        image: component-oriented-web-app_mysql
        imagePullPolicy: "Never"
        args:
          - mysqld
          - --character-set-server=utf8mb4
          - --collation-server=utf8mb4_unicode_ci
        ports:
        - containerPort: 3306
      restartPolicy: Always
