deploy/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
spec:
  ports:
  - name: "8080"
    port: 8080
    targetPort: 8080
  selector:
    app: component-api
