deploy/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
spec:
  ports:
  - name: "3000"
    port: 3000
    targetPort: 3000
  selector:
    app: component-app
