deploy/nginx-gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-gateway
spec:
  ports:
  - name: "80"
    port: 80
    targetPort: 80
  selector:
    app: component-nginx-gateway
