deploy/storage-gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: storage-gateway
spec:
  ports:
  - name: "8090"
    port: 8090
    targetPort: 8090
  selector:
    app: component-storage-gateway
